--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -1,4 +1,6 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cvItemArticle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
@@ -30,6 +32,7 @@
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
+            android:textSize="14sp"
             android:textColor="@color/ltgray"
             android:ellipsize="end"
             android:maxLines="4" />
@@ -44,6 +47,7 @@
             android:paddingBottom="16dp"
             android:textColor="#6000"
             android:maxLines="2"
+            android:textSize="12sp"
             android:ellipsize="end" />
     </LinearLayout>
 
