--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,12 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="colorPrimary">#04561A</color>
-    <color name="colorPrimaryDark">#04561A</color>
-    <color name="colorAccent">#04561A</color>
+    <color name="colorPrimary">#FF9800</color>
+    <color name="colorPrimaryDark">#F57C00</color>
+    <color name="colorAccent">#FF4081</color>
     <color name="ltgray">#ffe0e0e0</color>
+
+    <color name="swipeColor1">#FF9800</color>
+    <color name="swipeColor2">#E91E63</color>
+    <color name="swipeColor3">#9C27B0</color>
 </resources>
