--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -34,6 +34,7 @@
             android:paddingBottom="4dp"
             android:textSize="14sp"
             android:textColor="@color/ltgray"
+            android:fontFamily="sans-serif"
             android:ellipsize="end"
             android:maxLines="4" />
 
@@ -47,6 +48,7 @@
             android:paddingBottom="16dp"
             android:textColor="#6000"
             android:maxLines="2"
+            android:fontFamily="sans-serif"
             android:textSize="12sp"
             android:ellipsize="end" />
     </LinearLayout>
