--- a/XYZReader/src/main/res/layout-v21/list_item_article.xml
+++ b/XYZReader/src/main/res/layout-v21/list_item_article.xml
@@ -10,6 +10,7 @@
     android:clickable="true"
     app:cardCornerRadius="4dp"
     android:focusable="true"
+    app:cardElevation="8dp"
     android:foreground="?selectableItemBackground">
 
     <LinearLayout
