--- a/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
@@ -1,51 +1,69 @@
-<android.support.design.widget.CoordinatorLayout android:id="@+id/clMovieDetail"
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:ignore="RtlHardcoded"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/article_title"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            app:expandedTitleMarginBottom="94dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.Inverse"
-            app:contentScrim="?colorPrimary">
-
-            <com.flaviofaria.kenburnsview.KenBurnsView
-                android:id="@+id/poster"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:tint="@color/detailTint"
-                android:fitsSystemWindows="true"/>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@null"
-                style="@style/ToolBarWithNavigationBack"
-                app:layout_collapseMode="pin" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        app:behavior_overlapTop="78dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="vertical">
+
+        <include layout="@layout/toolbar_main" />
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:baselineAligned="false">
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cvDetailLand"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/ArticleDetailCardViewAppearanceLand" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/poster"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="4"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:scaleType="centerCrop" />
+
+            <TextView
+                android:id="@+id/article_title_land"
+                style="@style/CollapsingTextAppearance"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="12dp"
+                android:textColor="@color/secondaryTextColor" />
+
+        </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,13 +75,16 @@
                 android:layout_height="wrap_content"
                 style="@style/ArticleDetailCardViewAppearance" >
 
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
                 <com.example.xyzreader.ui.MaxWidthLinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxWidth="@dimen/detail_card_max_width"
-                    android:background="#fff"
-                    android:elevation="2dp">
+                    android:background="#fff">
 
                     <TextView
                         android:id="@+id/article_byline"
@@ -92,13 +113,12 @@
                         android:layout_marginEnd="16dp"
                         android:background="@color/colorPrimary"/>
 
+
                     <TextView
                         android:id="@+id/article_body"
                         style="?android:attr/textAppearanceMedium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/detail_inner_horiz_margin"
-                        android:layout_marginEnd="@dimen/detail_inner_horiz_margin"
                         android:layout_marginTop="16dp"
                         android:paddingBottom="@dimen/detail_body_bottom_margin"
                         android:textColor="@color/primaryTextColor"
@@ -108,12 +128,16 @@
                         android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
 
                 </com.example.xyzreader.ui.MaxWidthLinearLayout>
+                </ScrollView>
 
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+    </LinearLayout>
+
+</LinearLayout>
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_fab"
@@ -122,12 +146,10 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
-        android:backgroundTint="@color/colorAccent"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:elevation="8dp"
         android:src="@drawable/ic_share"
         android:layout_gravity="bottom|right|end"
         tools:ignore="RtlHardcoded" />
 
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
