--- a/XYZReader/src/main/res/layout-land-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land-v21/fragment_article_detail.xml
@@ -61,11 +61,6 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -75,7 +70,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                        <com.example.xyzreader.ui.MaxWidthLinearLayout
+                        <com.example.xyzreader.util.MaxWidthLinearLayout
                             android:orientation="vertical"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -123,7 +118,7 @@
                                     android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
 
 
-                        </com.example.xyzreader.ui.MaxWidthLinearLayout>
+                        </com.example.xyzreader.util.MaxWidthLinearLayout>
                         </ScrollView>
 
                     </android.support.v7.widget.CardView>
@@ -133,7 +128,6 @@
             </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_fab"
@@ -145,7 +139,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_share"
-        android:elevation="8dp"
+        android:elevation="@dimen/fab_elevation"
+        android:translationZ="@dimen/fab_press_translation_z"
         android:layout_gravity="bottom|right|end"
         tools:ignore="RtlHardcoded" />
 
