--- a/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
@@ -65,11 +65,6 @@
         android:layout_height="match_parent"
         android:layout_weight="3">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -79,7 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                <com.example.xyzreader.ui.MaxWidthLinearLayout
+                <com.example.xyzreader.util.MaxWidthLinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -127,7 +122,7 @@
                         android:fontFamily="sans-serif"
                         android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
 
-                </com.example.xyzreader.ui.MaxWidthLinearLayout>
+                </com.example.xyzreader.util.MaxWidthLinearLayout>
                 </ScrollView>
 
             </android.support.v7.widget.CardView>
@@ -137,7 +132,6 @@
     </LinearLayout>
 
 </LinearLayout>
-    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_fab"
