--- a/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
+        android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -57,7 +58,7 @@
                 android:layout_height="wrap_content"
                 style="@style/ArticleDetailCardViewAppearance" >
 
-                <com.example.xyzreader.ui.MaxWidthLinearLayout
+                <com.example.xyzreader.util.MaxWidthLinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -107,7 +108,7 @@
                         android:fontFamily="sans-serif"
                         android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
 
-                </com.example.xyzreader.ui.MaxWidthLinearLayout>
+                </com.example.xyzreader.util.MaxWidthLinearLayout>
 
             </android.support.v7.widget.CardView>
 
@@ -125,7 +126,8 @@
         android:backgroundTint="@color/colorAccent"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:elevation="8dp"
+        android:elevation="@dimen/fab_elevation"
+        android:translationZ="@dimen/fab_press_translation_z"
         android:src="@drawable/ic_share"
         android:layout_gravity="bottom|right|end"
         tools:ignore="RtlHardcoded" />
