--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 style="@style/ArticleDetailCardViewAppearance" >
 
-                <com.example.xyzreader.ui.MaxWidthLinearLayout
+                <com.example.xyzreader.util.MaxWidthLinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
                         android:fontFamily="sans-serif"
                         android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
 
-                </com.example.xyzreader.ui.MaxWidthLinearLayout>
+                </com.example.xyzreader.util.MaxWidthLinearLayout>
 
             </android.support.v7.widget.CardView>
 
