--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -4,8 +4,15 @@
     <dimen name="detail_body_text_size">22sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.25</item>
 
-    <dimen name="fab_elevation">2dp</dimen>
+    <dimen name="fab_elevation">6dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
+
+    <dimen name="list_rv_padding_bottom">14dp</dimen>
+
+    <dimen name="toolbar_ctl_margin_end">64dp</dimen>
+    <dimen name="toolbar_ctl_margin_start">48dp</dimen>
+
+    <dimen name="list_image_height">200dp</dimen>
 
 </resources>
