fix title-length to avoid crashes implement screen orientation handling for Article Loader move helper classes to util package apply more materialish fix LoaderManager

--- a/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
@@ -129,7 +129,6 @@
         android:elevation="@dimen/fab_elevation"
         android:translationZ="@dimen/fab_press_translation_z"
         android:src="@drawable/ic_share"
-        android:layout_gravity="bottom|right|end"
-        tools:ignore="RtlHardcoded" />
+        android:layout_gravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
