--- a/XYZReader/src/main/res/layout-land-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land-v21/fragment_article_detail.xml
@@ -37,7 +37,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="4"
-                            android:scaleType="centerCrop" />
+                            android:scaleType="centerCrop"
+                            android:contentDescription="@null" />
 
                         <TextView
                             android:id="@+id/article_title_land"
@@ -136,12 +137,11 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_share"
         android:elevation="@dimen/fab_elevation"
         android:translationZ="@dimen/fab_press_translation_z"
-        android:layout_gravity="bottom|right|end"
-        tools:ignore="RtlHardcoded" />
+        android:layout_gravity="bottom|end"/>
 
 </FrameLayout>
