--- a/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
@@ -41,7 +41,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:contentDescription="@null" />
 
             <TextView
                 android:id="@+id/article_title_land"
@@ -140,10 +141,9 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_share"
-        android:layout_gravity="bottom|right|end"
-        tools:ignore="RtlHardcoded" />
+        android:layout_gravity="bottom|end" />
 
 </FrameLayout>
