--- a/XYZReader/src/main/res/layout-land-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land-v21/fragment_article_detail.xml
@@ -1,8 +1,6 @@
-<FrameLayout
-    android:layout_width="match_parent"
+<FrameLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -137,8 +135,7 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_share"
         android:elevation="@dimen/fab_elevation"
         android:translationZ="@dimen/fab_press_translation_z"
