--- a/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        android:elevation="4dp"
+        android:elevation="@dimen/app_bar_elevation"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -124,8 +124,7 @@
         android:clickable="true"
         android:focusable="true"
         android:backgroundTint="@color/colorAccent"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_margin="@dimen/fab_margin"
         android:elevation="@dimen/fab_elevation"
         android:translationZ="@dimen/fab_press_translation_z"
         android:src="@drawable/ic_share"
