--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -59,6 +59,7 @@
     <style name="ListRecyclerViewAppearance">
         <item name="android:clipToPadding">false</item>
         <item name="android:scrollbarStyle">outsideOverlay</item>
+        <item name="android:paddingTop">@dimen/list_rv_padding_top</item>
         <item name="android:paddingLeft">@dimen/list_side_margin</item>
         <item name="android:paddingRight">@dimen/list_side_margin</item>
         <item name="android:paddingBottom">@dimen/list_rv_padding_bottom</item>
@@ -73,10 +74,7 @@
 
     <!-- List CardView Style -->
     <style name="ListCardViewAppearance">
-        <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:layout_marginRight">4dp</item>
-        <item name="android:layout_marginTop">4dp</item>
-        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_margin">2dp</item>
         <item name="android:clickable">true</item>
         <item name="cardCornerRadius">4dp</item>
         <item name="android:focusable">true</item>
