--- a/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
@@ -1,19 +1,8 @@
-<FrameLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <include layout="@layout/toolbar_main" />
-
-<LinearLayout
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:baselineAligned="false">
+    android:baselineAligned="false"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -100,7 +89,7 @@
                         android:background="@color/secondaryTextColor"/>
 
                     <View
-                        android:layout_width="50dp"
+                        android:layout_width="30dp"
                         android:layout_height="1dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="72dp"
@@ -129,20 +118,3 @@
         </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/share_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        android:focusable="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_share"
-        android:elevation="@dimen/fab_elevation"
-        android:translationZ="@dimen/fab_press_translation_z"
-        android:layout_gravity="bottom|end" />
-
-</FrameLayout>
